-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 191101) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.3 *-

??112001 (v2.1dev5)
	- added: docs - Documentation/manpages.html
	- changed: most preset names changed in 'effect_presets'
	- changed: ecasoundrc - new defaults for mp3 and ogg
		   output
	- fixed: processing didn't stop with setups that had loop-
		 devices connected to multiple input objects
	- fixed: using loop devices in setups with non-default 
                 internal sample rate could cause unwanted 
  		 resampling
	- fixed: -kog and -f were broken (since dev4)
	- fixed: bugs in passing audio format params to 
                 mp3 and ogg encoders; note! update your 
		 ~/.ecasoundrc to match the new defaults,
		 see ecasoundrc(5) man page
	- fixed: ecasound wrote to ewf-files opened in read-only mode
31102001 (v2.1dev4)
	- added: eiam - 'cs-option' commmand; although explicit use 
		 of cmd-line options as iactive-mod commands (like 
                 "-i:file.wav") is still supported, "cs-option 
                 -i:file.wav" is now the preferred syntax
	- removed: ecasound FAQ file - it only contains about 	 
		   a pageful of useful text - I moved that
		   precious piece of content to the user's 
		   guide :)
	- changed: uses of '-i' an '-o' replaced with 'ai-add' 